--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 asgiref==3.7.2
 attrs==23.1.0
+black==23.7.0
+click==8.1.6
+colorama==0.4.6
 Django==4.0.4
 django-debug-toolbar==3.4.0
 djangorestframework==3.13.1
@@ -12,8 +15,12 @@ inflection==0.5.1
 jsonschema==4.17.3
 jsonschema-specifications==2023.7.1
 mccabe==0.7.0
+mypy-extensions==1.0.0
+packaging==23.1
+pathspec==0.11.2
 pep8-naming==0.13.2
 Pillow==10.0.0
+platformdirs==3.10.0
 psycopg2-binary==2.9.6
 pycodestyle==2.9.1
 pyflakes==2.5.0
